app/assets/stylesheets/application/document.css.scss
/* ... */
nav.navigation ul li a {
    text-transform: uppercase;
  }

.menu_link {
  width: 4em;
  padding-bottom: 0.3em;
  text-align: center;
  font-weight : bold;
  @include font-size(15);
  @include background-image(linear-gradient(bottom, $allom_green, $light_allom_green));
  background-color: $allom_green;
  @include border-bottom-left-radius;
  @include border-bottom-right-radius;
  a {
    color: white;
    display: block;
    text-decoration: none;
    font-weight: bold;
    &:hover, &:active {
      @include background-image(linear-gradient(bottom, $dark_allom_green, $allom_green));
      background-color: $allom_green;
    }
  }
}
  

.top_navigation_container {
  display: none;
}

.edit_action .top_navigation_container, .edit_action .bottom_navigation_container, .edit_action .footer {
  display: none;
}


.update_action .top_navigation_container, .update_action .bottom_navigation_container, .update_action .footer {
  display: none;
}


.new_action .top_navigation_container, .new_action .bottom_navigation_container, .new_action .footer{
  display: none;
}


.create_action .top_navigation_container, .create_action .bottom_navigation_container, .create_action .footer{
  display: none;
}
  
// 10 CONTENT 		============================================

.todo{
  //background-color: yellow; 
}

// 11 MAIN 			============================================

// 11A1 pagination

nav.pagination {
  width: 100%;
  @include font-size(11);
  @media only screen and (min-width: 320px)  {
    @include font-size(12);
  }

  @media only screen and (min-width: 360px)  {
    @include font-size(14);
  }  
  
  @media only screen and (min-width: 400px)  {
    @include font-size(16);
  }
  margin-bottom: 1em;
  @include clearfix; 
  .first, .prev, .current, .next, .last, .gap, .page  {
    @include border-radius;
    margin: 0.25em;
    background-color: $grey;
    color: white;
    float: left;  
    a, a:visited {
      display: block;
      padding: 0.5em;
      color: white;
      text-decoration: none;
    }
    a:hover, a:active {
      background-color: $darkgrey;
      @include border-radius;
    };
  }
  .gap { 
    background-color: white;
    color: $grey;  
    padding-left: 0;
    padding-right: 0;
   }
  .first { 
    margin-left: 0;
   }
  .last { 
    margin-right: 0; 
  }
  .current { 
    background-color: black; 
    padding: 0.5em;
  }
  .gap { display: none; }
}

// 11A2 calendar top
.outer_header_container {
  /*margin-top: 5%;*/
  width: 100%;
}

.inner_header_container{
  background-color: white;
  width: 80%;    
	padding-top: 2%;
}

.logotype_header_container{
  width: 62.5%;  
  padding-bottom: 2.5%;
}

.calendar_container{
  position: absolute; 
  bottom: 0; 
  right: 0;
  width: 20%;
}

.date_sheet{
  margin: auto 0 0 auto;
  width: 100%;

  @include background-image(linear-gradient(bottom, $dark_calendar, $light_calendar));
  background-color: $dark_calendar;

  text-align: center;
  color: $grey;
  @include font-size(10);    // 10..28
  
  .names {
    font-style: italic;
    font-size: 0.8em;
    line-height: 1em;
    padding-left: 2em;
    padding-right: 2em;
  }
  
  @media only screen and (min-width: 320px)  {
    @include font-size(12);
  }

  @media only screen and (min-width: 400px)  {
    @include font-size(16);
    .names {
      font-size: 0.6em;
    }
  }
  
  @media only screen and (min-width: 480px)  {
    @include font-size(20);
      .names {
        font-size: 0.5em;
      }
  }

  @media only screen and (min-width: 600px)  {
    @include font-size(24);
  }

  @media only screen and (min-width: 768px)  {
    @include font-size(30);
  }

  
  line-height: 1.5em;
  min-width: 4em;
  padding-bottom: 1em;
  padding-top: 0.75em;
  
  .weekday, .day_of_month, .month, .names{
    margin: 0 auto;
    padding: 0;
    text-align: center;
    vertical-align: bottom;
  }
  
  .weekday, .month {
    /* font-weight: bold;   */
  }
  
  .day_of_month {
    font-family: 'Domine', Georgia, Times New Roman;
    font-size: 2em;
    font-weight: bold;
    padding-top: 0.1em;
    padding-bottom: -0.1em;
  }
  

}

  





// 11B ARTICLE  =============================================================

.article {
  //margin-bottom: 5em;
}



.article ul{
  @include no-bullets;
}

#map_view {
  width: 100%;
  height: 252px;
  margin: 1em 0 1.5em 0;
}

.info_window{
  line-height: 0.15em;
  h1 {
    @include font-size(12);
    font-weight: bold; 
  }
  p {
    @include font-size(10);
  }
}

.map_container {
  width: 100%;
}

.gmaps4rails_map {
  width: 100%;
  height: 252px;
}

.bing_map {
  width: 100%;
  height: 252px;
  margin: 1em 0 1.5em 0;
}


.marker_legend_small_size {
  vertical-align: text-bottom;
  padding-right: 8px;
}

.marker_legend_mid_size {
  vertical-align: text-bottom;
}

.event_facts{
  p {
    margin: 0;
    padding: 0;
  }
  padding-top: $baseline;
  border-top: 1px solid $lightergrey;

}

.inline_heading{
  font-weight: bold;
  //color: $dark_allom_green;
}




// 11B1 HEADER  =============================================================
.header_image {
  @include border-radius;
}

.image_text{
  @include font-size(11);
  margin-top: 0.5em;
  a {
  text-decoration: none;
  }
}

p.category {
  color: $grey;
  margin-bottom: -1em;
}


.mini_calendar{
  caption {
    display: none;
  }

}

// 11B2 FOOTER  ===========================================

p.minor {
  @include font-size(10);
  margin-bottom: 1em;
  
}

p.article_meta {
  @include font-size(10);
  margin-bottom: 1em;
  color: $grey;
  img {
    float: left;
    margin: 0 1em 1em 0;
  }
}

.version {
  color: $lightgrey;
}

// 11C SEARCH ===========================================

.clear_search {
  @include font-size(15);
  a {
    text-decoration: underline;
    }

}
/* ... */

